--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
-    "build": "vue-cli-service build --mode production",
+    "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint",
     "ngrok": "ngrok http 8080 -host-header='localhost:8080'"
   },
