--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode dev",
+    "serve": "vue-cli-service serve --mode prod",
     "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint",
     "ngrok": "ngrok http 8080 -host-header='localhost:8080'"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
