--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,4 @@
 NODE_ENV=production
 
 VUE_APP_DEBUG=false
-VUE_APP_API_BASE_URL=https://labanane.no-ip.info
-
+VUE_APP_API_BASE_URL=https://labanane2.ddns.net
