--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "levenshtein": "^1.0.5",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
+    "string-similarity": "^2.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
