Add play/pause mediaSession handlers and improve pwa looking

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "labanane-pwa",
-  "short_name": "labanane-pwa",
+  "name": "LaBanane",
+  "short_name": "LaBanane",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#ffafbd",
+  "theme_color": "#ffafbd"
 }
