--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bowser": "^2.1.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
